feat: implement post comments in GET post endpoint
