# api/swagger/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/api/v1/auth/login": {
+        "/auth/login": {
             "post": {
                 "description": "Authenticate a user and return access and refresh tokens via HttpOnly cookies.",
                 "consumes": [
@@ -61,7 +61,7 @@
                 }
             }
         },
-        "/api/v1/auth/logout": {
+        "/auth/logout": {
             "post": {
                 "security": [
                     {
@@ -101,7 +101,7 @@
                 }
             }
         },
-        "/api/v1/auth/register": {
+        "/auth/register": {
             "post": {
                 "description": "Create a new user account.",
                 "consumes": [
@@ -147,7 +147,7 @@
                 }
             }
         },
-        "/api/v1/posts": {
+        "/posts": {
             "get": {
                 "security": [
                     {
@@ -256,7 +256,7 @@
                 }
             }
         },
-        "/api/v1/posts/{id}": {
+        "/posts/{id}": {
             "get": {
                 "description": "Retrieve a specific post by its ID.",
                 "produces": [
@@ -443,7 +443,7 @@
                 }
             }
         },
-        "/api/v1/posts/{id}/comments": {
+        "/posts/{id}/comments": {
             "post": {
                 "security": [
                     {
@@ -510,7 +510,7 @@
                 }
             }
         },
-        "/api/v1/users/{username}": {
+        "/users/{username}": {
             "get": {
                 "description": "Get a user by their username.",
                 "consumes": [
@@ -560,7 +560,7 @@
                 }
             }
         },
-        "/api/v1/users/{username}/followers": {
+        "/users/{username}/followers": {
             "get": {
                 "security": [
                     {
@@ -735,7 +735,7 @@
                 }
             }
         },
-        "/api/v1/users/{username}/following": {
+        "/users/{username}/following": {
             "get": {
                 "security": [
                     {
@@ -798,14 +798,14 @@
                 }
             }
         },
-        "/api/v1/users/{username}/posts": {
+        "/users/{username}/posts": {
             "get": {
                 "description": "Retrieve all posts for a specific user by username.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "posts"
+                    "users"
                 ],
                 "summary": "Get user posts by username",
                 "parameters": [
@@ -856,15 +856,37 @@
         }
     },
     "definitions": {
+        "github_com_billykore_project-one_internal_api_dto.CommentResponse": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "github_com_billykore_project-one_internal_api_dto.CreateCommentRequest": {
             "type": "object",
             "required": [
-                "content"
+                "content",
+                "id"
             ],
             "properties": {
                 "content": {
                     "type": "string",
                     "minLength": 1
+                },
+                "id": {
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
@@ -1005,6 +1027,12 @@
             "properties": {
                 "author": {
                     "type": "string"
+                },
+                "comments": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/github_com_billykore_project-one_internal_api_dto.CommentResponse"
+                    }
                 },
                 "content": {
                     "type": "string"
